--- a/platform/chromium/manifest.json
+++ b/platform/chromium/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
     "name": "nuTensor.d",
     "short_name": "nuTensor.d",
-    "version": "rc0.1.0",
+    "version": "v0.1.0-rc",
     "description": "__MSG_extShortDesc__",
     "icons": {
         "16": "img/icon_16.png",
